--- a/javascript_basics.html
+++ b/javascript_basics.html
@@ -1,1 +1,111 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="javascript_basics.css">
+    <title>Document</title>
+</head>
+
+<body>
+    <div class="container">
+        <div class="header">
+            <h1>JavaScript Basics</h1>
+        </div>
+        <div class="body_1">
+            <div class="sidebar">
+                <ul class="first_list">
+                    <li> <a href="#">Home</a>
+                        <ul class="second_list">
+                            <li><a href="#">JavaScript Overview</a>
+                                <ul class="third_list">
+                                    <li><a href="#">Variable Declaration</a></li>
+                                    <li><a href="#">Variable Assignment</a></li>
+                                    <li><a href="#">Data Type</a></li>
+                                    <li><a href="#">Conditionals</a></li>
+                                    <li><a href="#">Loops</a></li>
+                                    <li><a href="#">Function</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#">Projects</a></li>
+                            <li><a href="#">Assignments</a></li>
+                            <li><a href="#">Quiz</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+            <div class="body">
+                <div class="head_body">
+                    <h2>JavaScript Basics</h2>
+                    <p>JavaScript is a cross-platform, object-oriented scripting language. JavaScript is extremely
+                        popular for a
+                        variety of
+                        reasons. It is a small and lightweight language allowing maximum flexibility for developers to
+                        take it
+                        in a bunc h
+                        of different directions. JavaScript lives inside a host environment (a web browser or Node
+                        server), it
+                        can be
+                        connected to the objects of these environments to provide programmatic control over them.</p>
+                </div>
+                <div class="list_body">
+                    <ul>
+                        <li><span class="keyterm"> Variable Declaration </span> JavaScript variables are containers for
+                            storing
+                            data values - imagine a cup you fill with coffee, the cup holds the coffee, a variable holds
+                            a
+                            value. All JavaScript variables must be identified with unique namees. These unique names
+                            are called
+                            identifiers. <span class="line_example">var x;</span></li>
+                        <li><span class="keyterm">Variable Assignment </span> Assignment operators assign values to
+                            JavaScript
+                            variables - our cup can now have coffee poured in it, giving our variable a value to hold.
+                            The =
+                            assignment operator assigns a value to a variable.<span class="line_example">var
+                                x=10;</span></li>
+                        <li><span class="keyterm">Data Types</span> Data types are an important concept; to be able to
+                            operate
+                            on variables you need to know the data type. There are six data types that are JavaScript
+                            primitives: Boolean - <span class="line_example"> true</span> or <span
+                                class="line_example">false;</span>null - <span class="line_example">null</span> aka
+                            nothing;
+                            Number - <span class="line_example">42</span> or <span
+                                class="line_example">3.14159;</span>String -
+                            <span class="line_example">"Coding Dojo Rocks!;"</span> Array - <span
+                                class="line_example">[1,
+                                'Coding', 2, 'Dojo];</span> and Object - <span class="line_example">{first_name: 'Jane',
+                                last_name: 'Doe'}</span></li>
+                        <li><span class="keyterm">Conditionals</span> When you write code, you want to perform different
+                            actions for different decisions - hitting different code blocks based on values or
+                            conditions that have been met. You can use conditional statements in your code to accomplish
+                            this. There are the following conditional statements: <span class="line_example">if</span> a
+                            specified condition is true, do this code in our code block; <span class="line_example">else
+                                if</span> to specify a new condition to test, if the first condition is false; <span
+                                class="line_example">else</span> we execute this block of code;
+                        </li>
+                        <li><span class="keyterm">Loops</span> There are many different kinds of loops in every
+                            programming language, but they all essentially do the same thing: they will repeat an action
+                            some number of times. Imagine you have to run a mile, well you run around the track four
+                            times and then you stop. Thats a loop!
+                        </li>
+                        <li><span class="keyterm">Function</span>Functions are an encapsulation of a code block. When we
+                            call our function this will run that code block. Think of it as a list of instructions. As
+                            an example imagine we are putting together a desk from Ikea, we open up the instruction
+                            manual and get started, first we screw the legs to the table top; next we place the table
+                            the right way up. Done! We finsihed our instructions. Sadly there are a ton more tables to
+                            do so lets call our function over and over and over again.
+                        </li>
+
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="footer">
+            <p>For more useful information, check out this url: <a href="#">JavaScript!</a></p>
+        </div>
+    </div>
+
+</body>
+
+</html>
